# playlist-sync

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
playlist_sync/: __about__.py  __init__.py  __main__.py  playlist.py  track.py
playlist_sync/cli/: __init__.py  spotify_to_yt.py  utils.py  yt_to_spotify.py
playlist_sync/services/: base.py  spotify.py  ytmusic.py
requirements/: requirements-test.txt
